using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace ConnectFourConsoleApp.Models.Types;
internal enum Token
{
    X,
    O,
    Null
}
