using Mastermind.Controllers;

namespace Mastermind.GameViews;

public interface IGameVIew : IControllerVisitor
{
}
