namespace Mastermind.Types;

public enum StateCode
{
    Initial,
    InGame,
    Resume,
    OutGame
}
